fix avoid jumping width/content on focus and critical

--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -50,11 +50,27 @@
         &_small {
             padding: var(--space-75) var(--space-100);
             height: 32px;
+
+            &:focus:not(.Input--context_critical):not([readOnly]) {
+                padding: var(--space-75) calc(var(--space-100) - 1px);
+            }
+
+            &.Input--context_critical {
+                padding: var(--space-75) calc(var(--space-100) - 1px);
+            }
         }
 
         &_medium {
             padding: calc(var(--space-25) * 5) var(--space-150);
             height: 40px;
+
+            &:focus:not(.Input--context_critical):not([readOnly]) {
+                padding: calc(var(--space-25) * 5) calc(var(--space-150) - 1px);
+            }
+
+            &.Input--context_critical {
+                padding: calc(var(--space-25) * 5) calc(var(--space-150) - 1px);
+            }
         }
     }
 
